--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,15 +7,10 @@
 		"terminal.integrated.defaultProfile.linux": "zsh"
 	},
 	"extensions": [
-		"ms-dotnettools.vscode-dotnet-runtime",
-		"ms-vscode.azure-account",
 		"ms-azuretools.vscode-azureresourcegroups",
-		"ms-azuretools.vscode-azurefunctions",
 		"ms-azuretools.vscode-azurestaticwebapps",
-		"ms-azuretools.vscode-bicep",
-		"ms-python.python",
-		"sourcery.sourcery",
-		"visualstudioexptteam.vscodeintellicode"
+		"ms-vscode.azure-account",
+		"ms-vscode.live-server"
 	],
 	"forwardPorts": [
 		7000
