--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
 		"ms-azuretools.vscode-azureresourcegroups",
 		"ms-azuretools.vscode-azurestaticwebapps",
 		"ms-vscode.azure-account",
-		"ms-vscode.live-server"
+		"ms-vscode.live-server",
+        "VisualStudioExptTeam.vscodeintellicode"
 	],
 	"forwardPorts": [
 		7000
